<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Duel of Life</string>


	<string name="options_lblOptions">Options</string>
	<string name="options_lblVisuals">Visuals</string>
	<string name="options_lblGameplay">Gameplay</string>
	<string name="options_lblPerformance">Performance</string>
	<string name="options_lblEditor">Ruleset Editor</string>
	<string name="start_txtIntro">Duel of Life lets you define two life-like cellular
		automata that compete against each other in the struggle for survival.
	</string>
	<string name="start_btnPlay">Start</string>
	<string name="start_btnOptions">Options</string>
	<string name="start_btnHowTo">How To</string>
	<string name="start_txtHyperlink">www.cbuelter.de</string>
	

	<string name="options_ttlTorus">Use Torus Field</string>
	<string name="options_ttlGrid">Draw Cell Grid</string>
	<string name="options_ttlStats">Show Statistics</string>
	<string name="options_ttlFade">Fade out dead Cells</string>
	<string name="options_ttlBrush">Brush Size</string>
	<string name="options_ttlFill">Random Fill at Start</string>
	<string name="options_ttlFps">Frames per Second</string>
	<string name="options_ttlAdd">No Grid Reset</string>
	<string name="options_ttlRes">Cell Resolution</string>
	<string name="options_ttlRules">Change Rulesets</string>
	<string name="options_sumTorus">A field without limiting borders is called a torus
		field. It gives the cells much more room to evolve.
	</string>
	<string name="options_sumGrid">Drawing a grid around cells helps to determine
		patterns.
	</string>
	<string name="options_sumStats">The statistics show the number of living cells,
		generations and the chosen rulesets.
	</string>
	<string name="options_sumFade">Dead cells can be faded out slowly to trace the
		path of life on the grid. Adjust the time here.
	</string>
	<string name="options_sumBrush">For painting and erasing cells on the grid,
		different brush sizes can be used.
	</string>
	<string name="options_sumFill">At the start of a new grid, choose the density of
		randomly generated living cells here.
	</string>
	<string name="options_sumFps">Can be used to slow down the calculations, to see
		what happens step by step.
	</string>
	<string name="options_sumAdd">If the old grid is not reset, some interesting
		effects occur (The Blob).
	</string>
	<string name="options_sumRes">Number of cells on the grid. Performance heavy!
		Will reset the grid when changed.
	</string>
	<string name="options_sumRules">Define the rules for birth and survival of both
		cellular automata.
	</string>
	<string name="menu_eraser">Use Eraser</string>
	<string name="menu_brush">Use Brush</string>
	<string name="menu_color_blue">Choose Blue</string>
	<string name="menu_color_red">Choose Red</string>
	<string name="menu_play">Play</string>
	<string name="menu_pause">Pause</string>
	<string name="menu_clear">Clear Grid</string>
	<string name="menu_restart">Restart Grid</string>
	<string name="menu_options">Options</string>
	<string name="menu_screenshot">Save as Image</string>
	<string name="editor_ttlRed">Red Ruleset</string>
	<string name="editor_ttlBlue">Blue Ruleset</string>
	<string name="editor_ttlBirth">Birth</string>
	<string name="editor_ttlSurvival">Survival</string>
	<string name="editor_ttlPreset">Load Presets:</string>
	<string name="editor_ttlPresetRed">Red Preset:</string>
	<string name="editor_ttlPresetBlue">Blue Preset:</string>
	<string name="editor_explanation">Set rules for birth and survival. Each checkbox
		corresponds to the number of living neighbouring cells, that trigger
		birth or survival when checked.
	</string>
	<string name="editor_btnResetRed">Reset Red</string>
	<string name="editor_btnRandomizeRed">Randomize Red</string>
	<string name="editor_btnResetBlue">Reset Blue</string>
	<string name="editor_btnRandomizeBlue">Randomize Blue</string>
	<string name="editor_blueToRed">Blue to Red</string>
	<string name="editor_btnResetAll">Reset All</string>
	<string name="editor_0"> 0</string>
	<string name="editor_1"> 1</string>
	<string name="editor_2"> 2</string>
	<string name="editor_3"> 3</string>
	<string name="editor_4"> 4</string>
	<string name="editor_5"> 5</string>
	<string name="editor_6"> 6</string>
	<string name="editor_7"> 7</string>
	<string name="editor_8"> 8</string>

	<string-array name="arr_entries_fade">
		<item name="0">No fade-out</item>
		<item name="1">Slowest fade-out</item>
		<item name="3">Slow fade-out</item>
		<item name="6">Average fade-out</item>
		<item name="12">Quick fade-out</item>
		<item name="255">Instant fade-out</item>
	</string-array>
	<string-array name="arr_values_fade">
		<item name="0">0</item>
		<item name="1">1</item>
		<item name="3">3</item>
		<item name="6">6</item>
		<item name="12">12</item>
		<item name="255">255</item>
	</string-array>
	<string-array name="arr_entries_brush">
		<item name="0">1x1 cells</item>
		<item name="1">3x3 cells</item>
		<item name="2">5x5 cells</item>
		<item name="3">7x7 cells</item>
		<item name="4">9x9 cells</item>
		<item name="5">11x11 cells</item>
	</string-array>
	<string-array name="arr_values_brush">
		<item name="0">0</item>
		<item name="1">1</item>
		<item name="2">2</item>
		<item name="3">3</item>
		<item name="4">4</item>
		<item name="5">5</item>
	</string-array>
	<string-array name="arr_entries_fill">
		<item name="0">No living cells</item>
		<item name="1">8% living cells</item>
		<item name="2">15% living cells</item>
		<item name="3">22% living cells</item>
		<item name="4">30% living cells</item>
		<item name="5">50% living cells</item>
	</string-array>
	<string-array name="arr_values_fill">
		<item name="0">0.00</item>
		<item name="1">0.08</item>
		<item name="2">0.15</item>
		<item name="3">0.22</item>
		<item name="4">0.30</item>
		<item name="5">0.50</item>
	</string-array>
	<string-array name="arr_entries_fps">
		<item name="0">1 Frame per Second</item>
		<item name="1">3 Frames per Second</item>
		<item name="2">6 Frames per Second</item>
		<item name="3">12 Frames per Second</item>
		<item name="4">25 Frames per Second</item>
	</string-array>
	<string-array name="arr_values_fps">
		<item name="0">1</item>
		<item name="1">3</item>
		<item name="2">6</item>
		<item name="3">12</item>
		<item name="4">25</item>
	</string-array>

	<string-array name="arr_entries_presets">
		<item name="0">None</item>
		<item name="0">Life (Default)</item>
		<item name="0">Inverse Life</item>
		<item name="0">34 Life</item>
		<item name="0">High Life</item>
		<item name="0">Long Life</item>
		<item name="0">Pseudo Life</item>
		<item name="0">Life without Death</item>
		<item name="0">2x2</item>
		<item name="0">Assimilation</item>
		<item name="0">Coagulations</item>
		<item name="0">Coral</item>
		<item name="0">Day and Night</item>
		<item name="0">Amoeba</item>
		<item name="0">Diamoeba</item>
		<item name="0">Flakes</item>
		<item name="0">Gnarl</item>
		<item name="0">Maze</item>
		<item name="0">Maze with Mice</item>
		<item name="0">Mazectric</item>
		<item name="0">Corrosion of Conformity</item>
		<item name="0">Move</item>
		<item name="0">Replicator</item>
		<item name="0">Seeds</item>
		<item name="0">Serviettes</item>
		<item name="0">Stains</item>
		<item name="0">Walled Cities</item>
	</string-array>




</resources>