<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editor_scrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/gol_start" />

        <TextView
            android:id="@+id/start_txtIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/start_txtIntro"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/start_btnPlay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:onClick="startGame"
            android:text="@string/start_btnPlay" />

        <Button
            android:id="@+id/start_btnHowTo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:enabled="true"
            android:onClick="goToHowTo"
            android:text="@string/start_btnHowTo" />

        <Button
            android:id="@+id/start_btnOptions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:onClick="goToOptions"
            android:text="@string/start_btnOptions" />
        
        <TextView
            android:id="@+id/start_txtHyperlink"
            android:autoLink="web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_txtHyperlink"
            android:textAppearance="?android:attr/textAppearanceSmall" />		
        
    </LinearLayout>

</ScrollView>